Pushing test cases

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple CICD Restful Service Example for Target Code Challenge",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,11 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "foreverjs": "^1.0.6"
+    "foreverjs": "^1.0.6",
+    "random-js": "^1.0.8",
+    "request": "^2.81.0"
+  },
+  "devDependencies": {
+    "should": "^11.2.1"
   }
 }
